--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
     "express-slow-down": "^2.1.0",
+    "firebase-admin": "^13.4.0",
     "helmet": "^8.1.0",
     "mongodb": "^6.16.0",
     "mongoose": "^8.15.0",
