(Admin-Client): Fixed some name errors in public folder.

--- a/admin-client/public/manifest.json
+++ b/admin-client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "SlipIT",
-  "name": "SlipIT",
+  "short_name": "SlipIT (Admin)",
+  "name": "SlipIT (Admin)",
   "icons": [
     {
       "src": "favicon.ico",
