--- a/admin-client/public/manifest.json
+++ b/admin-client/public/manifest.json
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#81d2c7",
+  "theme_color": "#003d53",
   "background_color": "#003d53"
 }
