--- a/admin-client/package.json
+++ b/admin-client/package.json
@@ -7,6 +7,7 @@
     "axios": "^1.9.0",
     "cra-template-pwa": "2.0.0",
     "react": "^19.1.0",
+    "react-datetime": "^3.3.1",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1",
     "react-scripts": "5.0.1",
