--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@tanstack/react-query": "^5.80.7",
     "axios": "^1.9.0",
     "cra-template-pwa": "2.0.0",
+    "firebase": "^11.9.1",
     "formik": "^2.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
