--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@arcjet/inspect": "^1.0.0-beta.8",
+    "@arcjet/node": "^1.0.0-beta.8",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "express-rate-limit": "^7.5.0",
-    "express-slow-down": "^2.1.0",
     "firebase-admin": "^13.4.0",
     "helmet": "^8.1.0",
     "mongodb": "^6.16.0",
