--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "firebase-admin": "^13.4.0",
     "helmet": "^8.1.0",
+    "ioredis": "^5.6.1",
     "mongodb": "^6.16.0",
     "mongoose": "^8.15.0",
     "morgan": "^1.10.0",
